--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 checkstyle {
-    toolVersion = '10.2'
+    configFile = file('config/checkstyle/checkstyle.xml')
 }
 
 test {
