--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 checkstyle {
-    configFile = file('config/checkstyle/checkstyle.xml')
+    toolVersion = '10.2'
 }
 
 test {
